loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:13: error: ';' expected but 'while' found.
    } while (!crossing())
      ^Poucet2:17: error: 'while' expected but 'if' found.
  if (baggles <= 2) {
  ^Poucet2:26: error: '(' expected but '}' found.
}
^